tests/bad/test_end5.pas
program test_end;

end.
